--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,69 +1,69 @@
-{% extends "profiles/base.html" %}
-{%load static%}
 
 
-{%block content%}
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+
+	<style type="text/css">
 
 
 
+				.StripeElement {
+				  box-sizing: border-box;
 
-<style type="text/css">
-				/**
-			 * The CSS shown here will not be introduced in the Quickstart guide, but shows
-			 * how you can use CSS to style your Element's container.
-			 */
-			.StripeElement {
-			  box-sizing: border-box;
+				  height: 40px;
 
-			  height: 40px;
+				  padding: 10px 12px;
 
-			  padding: 10px 12px;
+				  border: 1px solid transparent;
+				  border-radius: 4px;
+				  background-color: white;
 
-			  border: 1px solid transparent;
-			  border-radius: 4px;
-			  background-color: white;
+				  box-shadow: 0 1px 3px 0 #e6ebf1;
+				  -webkit-transition: box-shadow 150ms ease;
+				  transition: box-shadow 150ms ease;
+				}
 
-			  box-shadow: 0 1px 3px 0 #e6ebf1;
-			  -webkit-transition: box-shadow 150ms ease;
-			  transition: box-shadow 150ms ease;
-			}
+				.StripeElement--focus {
+				  box-shadow: 0 1px 3px 0 #cfd7df;
+				}
 
-			.StripeElement--focus {
-			  box-shadow: 0 1px 3px 0 #cfd7df;
-			}
+				.StripeElement--invalid {
+				  border-color: #fa755a;
+				}
 
-			.StripeElement--invalid {
-			  border-color: #fa755a;
-			}
+				.StripeElement--webkit-autofill {
+				  background-color: #fefde5 !important;
+				}
 
-			.StripeElement--webkit-autofill {
-			  background-color: #fefde5 !important;
-			}
 
-</style>
 
+	</style>
+
+</head>
+<body>
+
+	
+	<form action="{%url 'charge'%}" method="post" id="payment-form">
+		{%csrf_token%}
+	  <div class="form-row">
+	    <label for="card-element">
+	      Credit or debit card
+	    </label>
+	    <div id="card-element">
+	      <!-- A Stripe Element will be inserted here. -->
+	    </div>
+
+	    <!-- Used to display form errors. -->
+	    <div id="card-errors" role="alert"></div>
+	  </div>
+
+	  <button class="" >Submit Payment</button>
+	</form>
 
 <script src="https://js.stripe.com/v3/"></script>
-<form action="{%url 'charge'%}" method="post" id="payment-form">
-	{%csrf_token%}
-  <div class="form-row">
-    <label for="card-element">
-      Credit or debit card
-    </label>
-    <div id="card-element">
-      <!-- A Stripe Element will be inserted here. -->
-    </div>
-
-    <!-- Used to display form errors. -->
-    <div id="card-errors" role="alert"></div>
-  </div>
-
-  <button class="" >Submit Payment</button>
-</form>
-
- 
-
-<script type="text/javascript">
+	<script type="text/javascript">
 				// Create a Stripe client.
 			var stripe = Stripe('pk_test_adxMDqVWKO7wwFWf3QgpgYBu00ksKMAEII');
 
@@ -139,16 +139,10 @@
 
 
 
-
-{%endblock%}
-
-
+</body>
+</html>
 
 
 
 
-{%block js%}
-
-
-
-{%endblock%}
+ 
