--- a/profiles/templates/profiles/navbar.html
+++ b/profiles/templates/profiles/navbar.html
@@ -29,5 +29,9 @@
         </div>
       </li>
     </ul>
+    <div class=" float-right pull-right">
+      <a  class="" href="{%url 'premium'%}">Premium</a>
+    </div>
+      
   </div>
 </nav>
