--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -1,5 +1,6 @@
-h1{
-	color: #1a535c;
+h2{
+	/*color: #1a535c;*/
+    color: red;
 	text-align : left;
 }
 
@@ -45,6 +46,8 @@ body {
     background-color: #4ecdc4;
     border-radius: .3rem;
 }
+
+
 
 
 
