--- a/profiles/templates/profiles/navbar.html
+++ b/profiles/templates/profiles/navbar.html
@@ -1,3 +1,6 @@
+{%load static%}
+
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="{%url 'home'%}"><span class="span1">Jerem <span class="span2">AI</span>h</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +24,9 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           {%if user.is_authenticated%}
           <a class="dropdown-item" href="{%url 'account_logout'%}">Logout</a>
-          <a class="dropdown-item" href="#">Profile</a>
+          {%if user.userprofile%}
+          <a class="dropdown-item" href="{%url 'profile' user.userprofile.pk %}">Profile</a>
+          {%endif%}
           {%else%}
           <a class="dropdown-item" href="{%url 'account_login'%}">Login</a>
           <a class="dropdown-item" href="{%url 'account_signup'%}">Sign up</a>
@@ -32,6 +37,27 @@
     <div class="btn btn-primary ml-4">
       <a  class="text-dark" href="{%url 'premium'%}">Premium</a>
     </div>
+
       
+
+
+
   </div>
+
+
+{%if user.is_authenticated%}
+          <form class="form-inline my-2 my-lg-0 float-right">
+          {%if user.userprofile%}
+          <p class="mr-3"><strong><a class="text-info" href="{%url 'profile' user.userprofile.pk%}">{{user.userprofile.name}}</a></strong></p>
+          <a class=" m-2" href="{% url 'profile' user.userprofile.pk %}"><img style="width: 40px; height: 40px;" class=" rounded img-fluid  float-right" src="{{user.userprofile.image.url}}"></a>
+          {%else%}
+            <a href="{%url 'profile_create'%}" class="btn btn-outline-light my-2 my-sm-0 m-2" href="#">Create Profile</a>
+
+            
+          {%endif%}
+          </form>
+      
+  {%else%}
+  {%endif%}
 </nav>
+
