--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,12 +4,11 @@ h2{
 	text-align : left;
 }
 
-}
 
 .span1{
 font-family: Lucida Handwriting;
-font-size:30px;
-padding-right: 10px
+font-size: 30px;
+padding-right: 10px;
 }
 
 .span2{
@@ -89,3 +88,41 @@ body {
 
 
 
+
+
+
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
